feat: sync skill with fabio v0.26.0
Expand data-agent command group from 9 to 22 subcommands enabling full
lifecycle management of Fabric Data Agents from the CLI.

Version bump:
- metadata.version in SKILL.md: 0.25.0 -> 0.26.0
- Docker image tag and README install examples updated

New data-agent subcommands (COMMANDS.md):
- get-config, update-config (agent configuration)
- list-datasources, show-datasource, add-datasource, remove-datasource
- select-tables, list-elements, describe-element
- list-fewshots, add-fewshot, remove-fewshot, upload-fewshots

Enhanced existing commands:
- query: added --stage sandbox|production, --timeout, --prompt (replaces
  --message), stdin fallback when --prompt omitted
- publish: added --to-m365 for M365 Copilot Agent Store publishing

New API behaviors documented (API-BEHAVIORS.md):
- --answer vs --query naming conflict (JMESPath collision)
- Datasource type mapping (8 Fabric item types)
- Few-shot upload formats (JSON, CSV, TSV)
- Operability limits (5 datasources, 100 few-shots, 25-row cap)
- M365 publishing requirements
- Stage mapping for query (sandbox/draft, production/publishing)
- Stdin fallback for --prompt

Examples rewritten (EXAMPLES.md):
- Expanded from 4 lines to 8 subsections covering all 22 subcommands
- Create/config, datasources, table selection, descriptions,
  few-shots (JSON + CSV bulk), publishing, and querying workflows

Upstream: https://github.com/iemejia/fabio/compare/v0.25.0...v0.26.0